package wildlifesimulation.model;

public enum Equipment {
    TRANQUILIZER_KIT,
    MEDICAL_KIT,
}
