@startuml Class Diagram 1

skinparam linetype ortho

' Define the main classes
class Animal {
    -temperament : Temperament {getter, setter}
    -state : State {getter, setter}

    +Animal(...)
    +getTemperament() : Temperament
    +setTemperament(Temperament temperament) : void
    +injure() : void
    +stabilize() : void
    +applyInjury() : void
    +reactToRanger(Ranger ranger) : void
}

class Ranger {
    -stressLevel : int {getter}

    +Ranger(...)
    +getStressLevel() : int
    +increaseStress(int level) : void
    +decreaseStress(int level) : void
    +treatAnimal(Animal animal) : void
    -attemptToTreatAnimal(Animal animal) : boolean
}

abstract class Temperament {
    #getAnimalState() : AnimalState
}

class PassiveAnimal {
    +getAnimalState() : AnimalState
}

class AggressiveAnimal {
    +getAnimalState() : AnimalState
}

class DefensiveAnimal {
    +getAnimalState() : AnimalState
}

class CuriousAnimal {
    +getAnimalState() : AnimalState
}

enum State {
    CALM
    ALERTED
    DEFENSIVE
    CURIOUS
    AGGRESSIVE
    FLEEING
    ATTACKING
    STABILIZED
    CRITICAL
}

enum Equipment {
    TRANQUILIZER_KIT
    MEDICAL_KIT
}

class Vehicle {
    -equipments: Map<Equipment, int> {getter}

    +Vehicle(...)
    +getEquipments() : Map<Equipment, int>
    +hasEquipment(Equipment equipment) : boolean
    +addEquipment(Equipment equipment) : void
    +removeEquipment(Equipment equipment) : void
}

' Notes for behaviors and methods
note right of Animal::Animal
    Animal(..., temperament) <<Updated>> {
        ...
        this.temperament := temperament
        this.state := AnimalState.CALM
    }
end note

note left of PassiveAnimal::getAnimalState
    getAnimalState() {
        return AnimalState.ALERTED
    }
end note

note left of AggressiveAnimal::getAnimalState
    getAnimalState() {
        return AnimalState.AGGRESSIVE
    }
end note

note right of DefensiveAnimal::getAnimalState
    getAnimalState() {
        return AnimalState.DEFENSIVE
    }
end note

note right of CuriousAnimal::getAnimalState
    getAnimalState() {
        return AnimalState.CURIOUS
    }
end note

note left of Ranger::Ranger
    Ranger(...) {
        ...
        this.stressLevel := 0
    }
end note

note left of Ranger::getStressLevel
    getStressLevel() {
        return stressLevel
    }
end note

note right of Ranger::increaseStressLevel
    increaseStressLevel(int level) {
        stressLevel += level
    }
end note

note right of Ranger::decreaseStressLevel
    decreaseStressLevel(int level) {
        stressLevel -= level
    }
end note

note left of Vehicle::Vehicle
    Vehicle(...) {
        ...
        this.equipments := new HashMap<Equipment, int>()
    }
end note

note left of Vehicle::getEquipments
    getEquipments() {
        return this.equipments
    }
end note

note right of Vehicle::hasEquipment
    hasEquipment(Equipment equipment) {
        return equipments.containsKey(equipment)
    }
end note

' Relationships between classes
Animal "1" *-- "1" Temperament : <<uses>>
Animal --- State : <<uses>>

Temperament <|-- AggressiveAnimal
Temperament <|-- PassiveAnimal
Temperament <|-- DefensiveAnimal
Temperament <|-- CuriousAnimal

Vehicle --- Equipment : <<uses>>
Ranger --- Vehicle : <<uses>>
Ranger --- Animal : <<uses>>

@enduml